--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="nav">
       <img
-        src="Company.png.png"
+        src="Screenshot 2023-11-09 005711.png"
         alt=""
       />
       <h4>Products</h4>
