--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id="nav">
       <img
-        src="Screenshot 2023-11-09 005711.png"
+        src="Screenshot 2023-11-09 005711.png.png"
         alt=""
       />
       <h4>Products</h4>
@@ -175,7 +175,7 @@ Be financially prepared for whatever life throws your way with help from Dhanraj
         />
         <div id="f1">
           <img
-            src="Screenshot 2023-11-09 005711.png"
+            src="Screenshot 2023-11-09 005711.png.png"
             alt=""
           />
         </div>
