--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Be financially prepared for whatever life throws your way with help from Dhanraj
         </div>
         <div id="f4">
           <h4>
-          4th,  Times Square, 43rd and Broadway,<br />
+          4th,  Times Square, 43rd and Broad,<br />
           New York City,NY <br />
           10036, United States<br />
             TEL: +1 212 401 8700<br />
